// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vacuum_parallel.sql > line 1 1`] = `
[
  "SET max_parallel_maintenance_workers TO 4",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {
                    "ival": 4,
                  },
                  "location": 40,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "max_parallel_maintenance_workers",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum_parallel.sql > line 6 1`] = `
[
  "CREATE TABLE parallel_vacuum_table (a int) WITH (autovacuum_enabled = off)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 70,
                      "names": [
                        {
                          "String": {
                            "sval": "off",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "autovacuum_enabled",
                  "location": 49,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "parallel_vacuum_table",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 36,
                  "typeName": {
                    "location": 38,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum_parallel.sql > line 12 1`] = `
[
  "CREATE INDEX regular_sized_index ON parallel_vacuum_table(a)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "regular_sized_index",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "a",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 36,
              "relname": "parallel_vacuum_table",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum_parallel.sql > line 16 1`] = `
[
  "CREATE INDEX vacuum_in_leader_small_index ON parallel_vacuum_table((1))",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "vacuum_in_leader_small_index",
            "indexParams": [
              {
                "IndexElem": {
                  "expr": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 68,
                    },
                  },
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 45,
              "relname": "parallel_vacuum_table",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum_parallel.sql > line 21 1`] = `
[
  "SELECT EXISTS (
SELECT 1
FROM pg_class
WHERE oid = 'vacuum_in_leader_small_index'::regclass AND
  pg_relation_size(oid) <
  pg_size_bytes(current_setting('min_parallel_index_scan_size'))
) as leader_will_handle_small_index",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "leader_will_handle_small_index",
                  "val": {
                    "SubLink": {
                      "location": 7,
                      "subLinkType": "EXISTS_SUBLINK",
                      "subselect": {
                        "SelectStmt": {
                          "fromClause": [
                            {
                              "RangeVar": {
                                "inh": true,
                                "location": 30,
                                "relname": "pg_class",
                                "relpersistence": "p",
                              },
                            },
                          ],
                          "limitOption": "LIMIT_OPTION_DEFAULT",
                          "op": "SETOP_NONE",
                          "targetList": [
                            {
                              "ResTarget": {
                                "location": 23,
                                "val": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 23,
                                  },
                                },
                              },
                            },
                          ],
                          "whereClause": {
                            "BoolExpr": {
                              "args": [
                                {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "oid",
                                            },
                                          },
                                        ],
                                        "location": 45,
                                      },
                                    },
                                    "location": 49,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "=",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "TypeCast": {
                                        "arg": {
                                          "A_Const": {
                                            "location": 51,
                                            "sval": {
                                              "sval": "vacuum_in_leader_small_index",
                                            },
                                          },
                                        },
                                        "location": 81,
                                        "typeName": {
                                          "location": 83,
                                          "names": [
                                            {
                                              "String": {
                                                "sval": "regclass",
                                              },
                                            },
                                          ],
                                          "typemod": -1,
                                        },
                                      },
                                    },
                                  },
                                },
                                {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "FuncCall": {
                                        "args": [
                                          {
                                            "ColumnRef": {
                                              "fields": [
                                                {
                                                  "String": {
                                                    "sval": "oid",
                                                  },
                                                },
                                              ],
                                              "location": 115,
                                            },
                                          },
                                        ],
                                        "funcformat": "COERCE_EXPLICIT_CALL",
                                        "funcname": [
                                          {
                                            "String": {
                                              "sval": "pg_relation_size",
                                            },
                                          },
                                        ],
                                        "location": 98,
                                      },
                                    },
                                    "location": 120,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "<",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "FuncCall": {
                                        "args": [
                                          {
                                            "FuncCall": {
                                              "args": [
                                                {
                                                  "A_Const": {
                                                    "location": 154,
                                                    "sval": {
                                                      "sval": "min_parallel_index_scan_size",
                                                    },
                                                  },
                                                },
                                              ],
                                              "funcformat": "COERCE_EXPLICIT_CALL",
                                              "funcname": [
                                                {
                                                  "String": {
                                                    "sval": "current_setting",
                                                  },
                                                },
                                              ],
                                              "location": 138,
                                            },
                                          },
                                        ],
                                        "funcformat": "COERCE_EXPLICIT_CALL",
                                        "funcname": [
                                          {
                                            "String": {
                                              "sval": "pg_size_bytes",
                                            },
                                          },
                                        ],
                                        "location": 124,
                                      },
                                    },
                                  },
                                },
                              ],
                              "boolop": "AND_EXPR",
                              "location": 92,
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum_parallel.sql > line 35 1`] = `
[
  "DELETE FROM parallel_vacuum_table",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "parallel_vacuum_table",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum_parallel.sql > line 40 1`] = `
[
  "INSERT INTO parallel_vacuum_table SELECT i FROM generate_series(1, 10000) i",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "parallel_vacuum_table",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "i",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 64,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 10000,
                                        },
                                        "location": 67,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 48,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 41,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                          ],
                          "location": 41,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum_parallel.sql > line 42 1`] = `
[
  "RESET max_parallel_maintenance_workers",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "max_parallel_maintenance_workers",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
